# aoc

./: .gitignore  README.md
2021/: 01.ijs  02.ijs  03.ijs  04.ijs  04verbose.ijs  05.ijs  05verbose.ijs  06.ijs  07.ijs  08.ijs  08a.ijs  09.ijs  10.ijs  11.ijs  14.ijs
2022/: 01.clj  02.clj  03.clj  04.clj  05.clj  06.clj  10.clj  11.clj  18.m  deps.edn
2024/: Cargo.toml
2024/01/: Cargo.toml
2024/01/src/: main.rs
2024/02/: Cargo.toml
2024/02/src/: main.rs
2024/03/: Cargo.toml
2024/03/src/: main.rs
2024/04/: Cargo.toml
2024/04/src/: main.rs
2024/05/: Cargo.toml
2024/05/src/: main.rs
2024/06/: Cargo.toml
2024/06/src/: main.rs
2024/07/: Cargo.toml
2024/07/src/: main.rs
2024/08/: Cargo.toml
2024/08/src/: main.rs
2024/09/: Cargo.toml
2024/09/src/: main.rs
2024/10/: Cargo.toml
2024/10/src/: main.rs
2024/11/: Cargo.toml
2024/11/src/: main.rs
2024/12/: Cargo.toml
2024/12/src/: main.rs
2024/13/: Cargo.toml
2024/13/src/: main.rs
2024/14/: Cargo.toml
2024/14/src/: main.rs
2024/15/: Cargo.toml
2024/15/src/: main.rs
2024/16/: Cargo.toml
2024/16/src/: main.rs
2024/17/: Cargo.toml
2024/17/src/: main.rs
2024/18/: Cargo.toml
2024/18/src/: main.rs
2024/19/: Cargo.toml
2024/19/src/: main.rs
2024/20/: Cargo.toml
2024/20/src/: main.rs
2024/21/: Cargo.toml
2024/21/src/: main.rs
2024/22/: Cargo.toml
2024/22/src/: main.rs
2024/23/: Cargo.toml
2024/23/src/: main.rs
2024/24/: Cargo.toml
2024/24/src/: main.rs
2024/25/: Cargo.toml
2024/25/src/: main.rs
2024/util/src/: lib.rs
